# rover

./: .gitignore  README.md  package.xml  setup.py
config/: rover.yaml  rover.yaml.old
config/rviz/: rover.rviz
doc/: class_diagram.md  git.md  komponenten_diagram.md  odometrie_allgemein.md  ros2_launch_nachschlagewerk.md  ros2_launch_styleguide.md  rover_architektur.md  rover_architektur_.md  rover_architektur_tmp.html  rover_development.md  rover_full.launch.md  rover_led_node.md  rover_led_node_nutzung.md  rover_module_doc.md
doc/esp32/: firmware_overview.md  i2c_protokoll_v1.md  i2c_protokoll_v2.md
doc/ros2_docs/: ros2_lifecycle_nodes.md  ros2_message_typen.md  ros2_slam_tool.md
launch/: depr_rover_param.launch.py  lifecycle_node_debug.launch.py  rover_full.launch copy.py  rover_full.launch.py  rover_full.launch_20250501.py  rover_full2.launch.py  rover_param2.launch.py
launch/backup/: depr_rover.launch.py  rover_full.launch.py
scripts/: lifecycle_dashboard.py  lifecycle_status_marker.py  shutdown_rover.py
src/esp32/esp32_rover/: esp32_rover.code-workspace  platformio.ini
src/rover/: __depr_drive_controller_node.py__  driver_controller_node.py  led_node.py  lifecycle_manager.py  lifecycle_node1.py  lifecycle_node2.py  lifecycle_status_marker.py  navigation_node.py  odom_node.py  rover_config.py  sensor_node.py  vision_node.py
test/: i2c_binary_test.py  i2c_check_pi5.py  i2c_json_test.py  i2c_simple_test.py  test_spi.py  ws2812_test.py  ws2812ring.py  ws2812ring_spi.py  ws2812spi_driver.py  ws2812spi_test.py  ws2812spi_test2.py
(+24 files in other folders)
