<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover</name>
  <version>0.1.0</version>
  <description>ROS2 Rover Project</description>
  <maintainer email="berndklein@gmx.de">bernd</maintainer>
  <license>MIT</license>

  <!-- Laufzeitabhängigkeiten -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Abhängigkeit zu deinem Interface-Paket -->
  <exec_depend>rover_interfaces</exec_depend>

  <!-- Test-Tools -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>